# Change Log
All notable changes to this project will be documented in this file.

## [1.36] 2021-15-08

### Added
  - Workbook.open: option if_blocked: :accept
  - ListRow#methods, respond_to?, alive?
  - Range#workbook, ListObject#workbook, ListRow#workbook

### Changed
  - Workbook#open instead of Workbook#reopen


## [1.35] 2021-24-07

## [1.34] 2021-21-06

## [1.34] 2021-15-06

## [1.33] 2021-01-06

## [1.32] 2021-23-04

### Added
  - Excel#each  
  - ListObject#each, value, rows_number, position, ==
  - ListObject#[] extended with options
  - ListRow#to_h, to_a, values=, keys_values, ==  
  - RangeOwners#names
  - Worksheet#each_cell

### Changed  
  - Worksheet#[]: returning range values given address or defined name (instead of returning a cell when giving address)
  - Worksheet#each traversing row values instead of cells
  - Excel#excels_number renamed to #instance_count
  - Excel#known_excels_number renamed to #known_instance_count
  - Excel#known_excel_instance renamed to #known_running_instance
  - Excel#known_excel_instances renamed to #known_running_instances
  - RangeOwners#rename_range renamed to #rename_name
  
## [1.31] 2021-14-01

### Added
  - Worksheet#table

## [1.30] 2020-18-11

## [1.29] 2020-05-11

### Added
  - Workbook.open can also take a Pathname object
  - General#init_reo_for_win32ole

## [1.28] 2020-23-10

## [1.27] 2020-16-10

## [1.26] 2020-09-10

### Added
  - General#change_current_binding

## [1.25] 2020-10-09]

## [1.24] 2020-25-09

## [1.23] 2020-02-09

## [1.22] 2020-10-08

### Added
  - Range#set_value

## [1.21] 2020-05-08
  
### Added
  - Range#rows, columns

## [1.20] 2020-23-07

### Changed
  - using pry in console

### Added
  - ListObject

## [1.19] 2020-10-6

### Added
  - Workheet#values, each_rowvalue


## [1.18] 2020-30-4

### Added
  - Workbook#worksheets, worksheets_count
  - Worksheet#each_value
  - Range#value, value=
  - Range#initialize: optional paramter worksheet

## [1.17]

### Added